--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@ log4j.rootLogger=DEBUG, file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d [%t] %-5p (%F:%L) - %m%n
-log4j.appender.file.File=C:/tmp/logs/ForwardTest.log
+log4j.appender.file.File=../logs/ForwardTest.log
 log4j.appender.file.MaxFileSize=5MB
 log4j.appender.file.MaxBackupIndex=10
 
