--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,8 +25,10 @@
         <error-code>404</error-code>
         <location>/notFound.html</location>
     </error-page>
-    
-    <filter>
+    <listener>
+        <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
+    </listener>
+    <!--    <filter>
         <filter-name>GroupFilter</filter-name>
         <filter-class>com.ertcorp.forwardtest.security.GroupFilter</filter-class>
     </filter>
@@ -38,5 +40,26 @@
     <context-param>
         <param-name>org.omnifaces.FACES_VIEWS_SCAN_PATHS</param-name>
         <param-value>/*.xhtml</param-value>
-    </context-param>
+    </context-param>-->
+    
+    
+    
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>Admin pages</web-resource-name>
+            <url-pattern>/Admin/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>Admin</role-name>
+        </auth-constraint>
+    </security-constraint>
+    
+    
+<!--    <security-role>
+        <role-name>Admin</role-name>
+    </security-role>-->
+    
+    
+    
+    
 </web-app>
